--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "r-bs-word-match",
   "version": "0.1.0",
+  "homepage": "http://phoenixjaymes/lab/r-bs-word-match/",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "bootstrap": "^4.3.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-react": "^7.13.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.3",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-dom": "^16.8.3",
+    "react-scripts": "^2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -14,7 +21,27 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "airbnb"
+    ],
+    "plugins": [
+      "react",
+      "import"
+    ],
+    "rules": {
+      "linebreak-style": "off",
+      "react/jsx-filename-extension": [
+        1,
+        {
+          "extensions": [
+            ".js",
+            ".jsx"
+          ]
+        }
+      ],
+      "react/require-default-props": 0
+    }
   },
   "browserslist": [
     ">0.2%",
