--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "r-bs-word-match",
   "version": "0.1.0",
-  "homepage": "http://phoenixjaymes/lab/r-bs-word-match/",
+  "homepage": "https://phoenixjaymes/lab/r-bs-word-match/",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-react": "^7.13.0",
+    "bootstrap": "^4.4.1",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-react": "^7.19.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
-    "react-bootstrap": "^1.0.0-beta.5",
-    "react-dom": "^16.8.3",
-    "react-scripts": "^2.1.5"
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
